Alteração no index.html para redirencionamento do botão de cadastro

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="navbar">
             <span class="logo">ATENDE JÁ.</span>
-            <button class="btn-cadastro">CADASTRO</button>
+            <a href="{{ url_for('cadastro') }}" class="btn-cadastro">Cadastro</a>
         </div>
     </header>
 
