--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -1,3 +1,4 @@
+/* Estilos Globais (Comuns a todas as páginas) */
 * {
     margin: 0;
     padding: 0;
@@ -6,10 +7,14 @@
 
 body {
     font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
     color: #333;
     line-height: 1.6;
 }
 
+/* Estilos do Index (Página Principal) */
 header {
     background-color: white;
     padding: 10px 20px;
@@ -46,15 +51,6 @@ header {
     padding: 60px 20px;
 }
 
-.dot {
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 50%;
-    margin-bottom: 10px;
-}
-
 h1 {
     color: #007BFF;
     font-size: 24px;
@@ -81,7 +77,6 @@ h1 {
     font-size: 18px;
 }
 
-
 .benefits {
     background-color: #f8f9fa;
     padding: 40px 20px;
@@ -102,3 +97,53 @@ h1 {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
+
+/* Estilos da Página de Cadastro */
+.container {
+    max-width: 400px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    text-align: center;
+    color: blue; 
+}
+
+label {
+    display: block;
+    margin: 15px 0 5px;
+    color: #555;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="date"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: #28a745;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 10px; 
+}
+
+button:hover {
+    background-color: #218838;
+}
+
+/* Estilos da Página de Login */
