Adicionei funcionalidade de login ao sistema

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -12,6 +12,8 @@
         <div class="navbar">
             <span class="logo">ATENDE JÁ.</span>
             <a href="{{ url_for('cadastro') }}" class="btn-cadastro">Cadastro</a>
+            <a href="{{ url_for('login') }}" class="btn-login">Login</a>
+
         </div>
     </header>
 
