--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -1,4 +1,3 @@
-/* Estilos Globais (Comuns a todas as páginas) */
 * {
     margin: 0;
     padding: 0;
@@ -14,7 +13,6 @@ body {
     line-height: 1.6;
 }
 
-/* Estilos do Index (Página Principal) */
 header {
     background-color: white;
     padding: 10px 20px;
@@ -34,6 +32,7 @@ header {
 }
 
 .btn-cadastro {
+    text-decoration: none;
     background-color: #007BFF;
     color: white;
     border: none;
@@ -44,6 +43,17 @@ header {
 
 .btn-cadastro:hover {
     background-color: #0056b3;
+}
+
+.btn-login {
+    text-decoration: none;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-left: 10px;
 }
 
 .hero {
@@ -145,5 +155,3 @@ button {
 button:hover {
     background-color: #218838;
 }
-
-/* Estilos da Página de Login */
