--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATENDE JA - Login</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="/frontend/static/login.css">
 </head>
 <body>
     <div class="container">
