Alteração no HTML de Juaum index.html (cadastro para login)

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="navbar">
             <span class="logo">ATENDE JÁ.</span>
-            <button class="btn-cadastro">CADASTRO</button>
+            <button class="btn-cadastro">LOGIN</button>
         </div>
     </header>
 
