--- a/frontend/templates/historico.html
+++ b/frontend/templates/historico.html
@@ -10,7 +10,7 @@
     
     <div id="visualImpairmentDialog" class="modal">
         <div class="modal-content">
-            <p>Você é deficiente visual?</p>
+            <p>VOCÊ É DEFICIENTE VISUAL?</p>
             <button onclick="setVisualImpairment('sim')">Sim</button>
             <button onclick="setVisualImpairment('nao')">Não</button>
         </div>
@@ -31,7 +31,7 @@
                 <!-- Atendimento 1 -->
                 <div class="history-item">
                     <p><strong>Nome do Cliente:</strong> Geraldo Sebastião Pedro Henrique da Mota</p>
-                    <p><strong>CPF:</strong> 417.447.624-14</p>
+                    <p><strong>CPF:</strong> 417.404.624-14</p>
                     <p><strong>Email:</strong> geraldo_sebastiao_damota@gmail.com</p>
                     <p><strong>Data de Nascimento:</strong> 18/05/1995</p>
                     <div class="attendance-dates">
@@ -59,7 +59,7 @@
                 <!-- Atendimento 3 -->
                 <div class="history-item">
                     <p><strong>Nome do Cliente:</strong> Maria Clara dos Santos</p>
-                    <p><strong>CPF:</strong> 222.333.444-55</p>
+                    <p><strong>CPF:</strong> 946.713.474-55</p>
                     <p><strong>Email:</strong> mariaclara.santos@gmail.com</p>
                     <p><strong>Data de Nascimento:</strong> 10/10/1988</p>
                     <div class="attendance-dates">
@@ -73,7 +73,7 @@
                 <!-- Atendimento 4 -->
                 <div class="history-item">
                     <p><strong>Nome do Cliente:</strong> Carlos Alberto da Silva</p>
-                    <p><strong>CPF:</strong> 111.222.333-44</p>
+                    <p><strong>CPF:</strong> 604.113.404-46</p>
                     <p><strong>Email:</strong> carlos.alberto@gmail.com</p>
                     <p><strong>Data de Nascimento:</strong> 30/03/1975</p>
                     <div class="attendance-dates">
@@ -87,7 +87,7 @@
                 <!-- Atendimento 5 -->
                 <div class="history-item">
                     <p><strong>Nome do Cliente:</strong> Ana Paula Mendes</p>
-                    <p><strong>CPF:</strong> 555.666.777-88</p>
+                    <p><strong>CPF:</strong> 103.552.747-48</p>
                     <p><strong>Email:</strong> anapaula.mendes@gmail.com</p>
                     <p><strong>Data de Nascimento:</strong> 05/08/1990</p>
                     <div class="attendance-dates">
@@ -101,7 +101,7 @@
                 <!-- Atendimento 6 -->
                 <div class="history-item">
                     <p><strong>Nome do Cliente:</strong> Lucas Pereira</p>
-                    <p><strong>CPF:</strong> 999.888.777-66</p>
+                    <p><strong>CPF:</strong> 175.925.374-57</p>
                     <p><strong>Email:</strong> lucas.pereira@hotmail.com</p>
                     <p><strong>Data de Nascimento:</strong> 12/12/1985</p>
                     <div class="attendance-dates">
@@ -112,6 +112,61 @@
                         </ul>
                     </div>
                 </div>
+                 <!-- Atendimento 7 -->
+                 <div class="history-item">
+                    <p><strong>Nome do Cliente:</strong> Ronaldo Gaúcho de Oliveira</p>
+                    <p><strong>CPF:</strong> 103.552.747-48</p>
+                    <p><strong>Email:</strong> ronaldogaucho123@gmail.com</p>
+                    <p><strong>Data de Nascimento:</strong> 05/08/1985</p>
+                    <div class="attendance-dates">
+                        <p>Datas de Atendimento:</p>
+                        <ul>
+                            <li>23/09/2023</li>
+                            <li>01/10/2023</li>
+                        </ul>
+                    </div>
+                </div>
+                 <!-- Atendimento 8 -->
+                 <div class="history-item">
+                    <p><strong>Nome do Cliente:</strong> Edson Arantes do Nascimento </p>
+                    <p><strong>CPF:</strong> 626.294.747-40</p>
+                    <p><strong>Email:</strong> pele.o.rei@gmail.com</p>
+                    <p><strong>Data de Nascimento:</strong> 23/10/1940</p>
+                    <div class="attendance-dates">
+                        <p>Datas de Atendimento:</p>
+                        <ul>
+                            <li>23/09/2023</li>
+                            <li>01/10/2023</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Atendimento 9 -->
+                <div class="history-item">
+                    <p><strong>Nome do Cliente:</strong> Neymar Júnior dos Santos </p>
+                    <p><strong>CPF:</strong> 301.255.747-84</p>
+                    <p><strong>Email:</strong> vemprofut123@gmail.com</p>
+                    <p><strong>Data de Nascimento:</strong> 05/08/1990</p>
+                    <div class="attendance-dates">
+                        <p>Datas de Atendimento:</p>
+                        <ul>
+                            <li>23/09/2023</li>
+                            <li>01/10/2023</li>
+                        </ul>
+            </div>
+            </div>
+
+                <!-- Atendimento 10 -->
+                <div class="history-item">
+                    <p><strong>Nome do Cliente:</strong> José Luiz Datena </p>
+                    <p><strong>CPF:</strong> 010.821.636-40</p>
+                    <p><strong>Email:</strong> cadeiraforte757@gmail.com</p>
+                    <p><strong>Data de Nascimento:</strong> 05/08/1957</p>
+                    <div class="attendance-dates">
+                        <p>Datas de Atendimento:</p>
+                        <ul>
+                            <li>23/09/2023</li>
+                            <li>01/10/2023</li>
+                        </ul>
             </div>
         </section>
     </main>
@@ -125,9 +180,9 @@
             historyItems.forEach(item => {
                 const cpf = item.querySelector('p:nth-child(2)').innerText.split(': ')[1].replace(/[.\-]/g, ''); // Obtenha o CPF e limpe os caracteres especiais
                 if (cpf.includes(filter)) {
-                    item.style.display = ''; // Mostra se o CPF corresponder
+                    item.style.display = ''; // Mostra se o CPF corresponder na pesquis.a
                 } else {
-                    item.style.display = 'none'; // Esconde se não corresponder
+                    item.style.display = 'none'; // Esconde se não corresponder na pesquisa
                 }
             });
         }
