adicionando botão de voltar na tela de historico

--- a/frontend/templates/historico.html
+++ b/frontend/templates/historico.html
@@ -18,6 +18,8 @@
 
     <header class="historico-header">
         <h1>Atende Já</h1>
+        <button class="back-button2" onclick="history.back()">Voltar</button>
+
     </header>
 
     <main class="historico-container2">
