--- a/frontend/templates/gerenciador.html
+++ b/frontend/templates/gerenciador.html
@@ -4,21 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciamento de Ordem de Chegada - Atende Já</title>
-    <link rel="stylesheet" href="CSS/style.css">
-    <style>
-        /* CSS para posicionar o botão de voltar no canto superior direito */
-        .back-button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="CSS/gerenciador.css">
 </head>
 <body>
     <!-- Modal para a pergunta de acessibilidade -->
@@ -45,7 +31,6 @@
     <main class="order-container">
         
         <div id="client-list" class="client-list">
-            
             
         </div>
     </main>
@@ -110,4 +95,3 @@
     </script>
 </body>
 </html>
-
