--- a/frontend/templates/check2.html
+++ b/frontend/templates/check2.html
@@ -15,12 +15,13 @@
     <div class="container">
         <div class="confirmation-card">
             <h1>Check-In Concluído!</h1>
+            <hr class="divider"> 
             <p>Veja a lista de usuários que fizeram check-in:</p>
             <ul id="user-list"></ul>
             <button id="clear-button" class="clear-button">Limpar Dados</button>
             <a href="index.html" class="back-button">Voltar para o Início</a>
         </div>
-    </div>
+        
 
     <script>
         function loadUserList() {
