Atualização arquivo index.html

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atende Já</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
+   <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
 </head>
 <body>
 
@@ -23,7 +23,9 @@
             <p class="subheading">"Organize a fila por chegada, mesas e check-ins."</p>
             <button class="btn-cadastro">CADASTRO</button>
             <p class="price">Planos a partir de R$ 85,90/mês.</p>
-            <div class="image-placeholder">IMAGEM</div>
+            <div class="image-placeholder">
+                <img src="imagens/lista-de-precos.png" alt="">
+            </div>
         </section>
 
        
@@ -31,14 +33,17 @@
             <h3>Organizar a fila de espera da sua empresa nunca foi tão fácil:</h3>
             <div class="benefit-icons">
                 <div class="icon">
+                    <img src="imagens/imagem (1).png" alt="">
                     <p>Download direto</p>
                     <p>Aplicativo para smartphones.</p>
                 </div>
                 <div class="icon">
+                    <img src="imagens/pc.png" alt="">
                     <p>Acesse via desktop</p>
                     <p>Sistema disponível para web.</p>
                 </div>
                 <div class="icon">
+                    <img src="imagens/confirme.png" alt="">
                     <p>Integração fácil</p>
                     <p>Com QR code e notificações.</p>
                 </div>
@@ -55,16 +60,16 @@
                 <h1>Você escolhe a melhor opção para se comunicar com o seu cliente</h1>
             </div>
             <div class="icon-block">
-                <p><img src="imagens/whatsapp (1).png" alt="Whatsapp Icon"> Envio de mensagens Whatsapp usando o próprio smartphone ou computador.</p>
-                <p><img src="sms-icon.png" alt="SMS Icon"> Envio de SMS rápido via sistema, sem necessidade de um celular com crédito.</p>
-                <p><img src="qr-code-icon.png" alt="QR Code Icon"> O cliente também pode acompanhar a fila via QR Code.</p>
+                <p><img src="imagens/whatsapp.png" alt="Whatsapp Icon"> Envio de mensagens Whatsapp usando o próprio smartphone ou computador.</p>
+                <p><img src="imagens/sms.png" alt="SMS Icon"> Envio de SMS rápido via sistema, sem necessidade de um celular com crédito.</p>
+                <p><img src="imagens/qr-digitalizar.png" alt="QR Code Icon"> O cliente também pode acompanhar a fila via QR Code.</p>
             </div>
         </section>
 
         <section class="section">
             <div class="text-block">
-                <p><img src="check-icon.png" alt="Check Icon"> Não é necessário a instalação de software.</p>
-                <p><img src="device-icon.png" alt="Device Icon"> Sistema acessível via desktop ou aplicativo.</p>
+                <p><img src="imagens/verificar.png" alt="Check Icon"> Não é necessário a instalação de software.</p>
+                <p><img src="imagens/celular (1).png" alt="Device Icon"> Sistema acessível via desktop ou aplicativo.</p>
             </div>
             <div class="icon-block">
                 <h1>Assim como utiliza o sistema com ou sem pager</h1>
@@ -77,16 +82,16 @@
                 <h1>E melhora a experiência dos seus clientes</h1>
             </div>
             <div class="icon-block">
-                <p><img src="crowd-icon.png" alt="Crowd Icon"> Evita aglomerações.</p>
-                <p><img src="diamond-icon.png" alt="Diamond Icon"> Ideal para bares, restaurantes, hotéis e faculdades.</p>
+                <p><img src="imagens/silencioso.png" alt="Crowd Icon"> Evita aglomerações.</p>
+                <p><img src="imagens/diamante.png" alt="Diamond Icon"> Ideal para bares, restaurantes, hotéis e faculdades.</p>
             </div>
         </section>
 
         
         <section class="section">
             <div class="text-block">
-                <p><img src="star-icon.png" alt="Star Icon"> Pronto para ser utilizado.</p>
-                <p><img src="evolution-icon.png" alt="Evolution Icon"> Dessa forma, seu atendimento evolui.</p>
+                <p><img src="imagens/estrela.png" alt="Star Icon"> Pronto para ser utilizado.</p>
+                <p><img src="imagens/editar.png" alt="Evolution Icon"> Dessa forma, seu atendimento evolui.</p>
             </div>
             <div class="icon-block">
                 <h1>Afinal, é um Sistema de Gestão de Filas de Espera</h1>
@@ -99,9 +104,9 @@
                 <h1>E para isso, oferecemos planos flexíveis</h1>
             </div>
             <div class="icon-block">
-                <p><img src="pricing-icon.png" alt="Pricing Icon"> Cobrança com base na utilização.</p>
-                <p><img src="payment-icon.png" alt="Payment Icon"> Pagamento via boleto.</p>
-                <p><img src="cancel-icon.png" alt="Cancel Icon"> Cancelamento simplificado.</p>
+                <p><img src="imagens/cartao-de-credito.png" alt="Pricing Icon"> Cobrança com base na utilização.</p>
+                <p><img src="imagens/mensagem.png" alt="Payment Icon"> Pagamento via boleto.</p>
+                <p><img src="imagens/cancelar.png" alt="Cancel Icon"> Cancelamento simplificado.</p>
             </div>
         </section>
     </div>
@@ -171,14 +176,12 @@
         <p>Se preferir, entre em contato:</p>
         <div class="opcoes">
             <div class="opcao">
-                <img src="whatsapp-icon.png" alt="Ícone de WhatsApp" class="icone-contato">
+                <img src="imagens/whatsapp.png" alt="Ícone de WhatsApp" class="icone-contato">
                 <p>Via Whatsapp<br>(88) 9999-9999</p>
             </div>
             <div class="opcao">
-                <img src="email-icon.png" alt="Ícone de E-mail" class="icone-contato">
-                <p><strong>Ou e-mail</strong><br>contato@atendeja.com.br</p>
+                <img src="imagens/mensagem.png" alt="Ícone de E-mail" class="icone-contato">
+                <p><strong>Ou e-mail</strong><br>contato@atendeja.com</p>
             </div>
         </div>
     </div>
-    
-    
